test/conformance/chainsaw/mutating-policies/existing/variables/auto-bind-sa-add/.chainsaw-tests/sa-with-annotation.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sa-auto-bind
  namespace: default
  annotations:
    rbac.example.com/auto-bind: "true"
