test/conformance/chainsaw/mutating-policies/existing/variables/auto-bind-sa-add/.chainsaw-tests/sa-without-annotation.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sa-no-bind
  namespace: default
