test/conformance/chainsaw/mutating-policies/existing/variables/auto-bind-sa-add/.chainsaw-tests/test-crb.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: test-crb
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: view
subjects: []
